plugins {
    id 'net.fabricmc.fabric-loom' version '1.17.20'
    id 'maven-publish'
    id 'org.jetbrains.kotlin.jvm' version '2.1.21'
}

version = "${project.mod_version}+mc${project.minecraft_version}"
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

loom {
    splitEnvironmentSourceSets()

    mods {
        "iq" {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

// Register the Kotlin source directory for the client split-env sourceset.
sourceSets {
    client {
        kotlin {
            srcDir 'src/client/kotlin'
        }
    }
}

fabricApi {
    configureTests {
        createSourceSet = true
        modId = 'iqaddons-test'
        enableGameTests = false
        enableClientGameTests = true
    }
}

tasks.named('compileClientJava', JavaCompile).configure {
    dependsOn tasks.named('compileClientKotlin')
    classpath += files(layout.buildDirectory.dir('classes/kotlin/client'))
}

repositories {
    maven {
        name = "Team Resourceful Maven"
        url = "https://maven.teamresourceful.com/repository/maven-public/"
    }

    maven {
        name = "FDD Maven"
        url = "https://maven.firstdark.dev/releases"
    }

    maven { url = "https://repo.hypixel.net/repository/Hypixel/" }
    maven { url = "https://maven.terraformersmc.com/releases" }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    implementation include("com.teamresourceful.resourcefulconfig:resourcefulconfig-fabric-26.2:${project.resourcefulconfig_version}")
    implementation "com.terraformersmc:modmenu:${project.modmenu_version}"

    implementation include('net.hypixel:mod-api:1.0.1')
    implementation include("dev.firstdark.discordrpc:discord-rpc:${project.discord_rpc_version}")

    compileOnly "org.projectlombok:lombok:1.18.38"
    annotationProcessor "org.projectlombok:lombok:1.18.38"

    // Fabric Language Kotlin supplies this at runtime; do not embed a duplicate 1.6 MB copy in IQ.
    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.1.21"

    def lwjglVersion = "3.4.1"
    implementation "org.lwjgl:lwjgl-nanovg:${lwjglVersion}"
    include "org.lwjgl:lwjgl-nanovg:${lwjglVersion}"
    ["natives-windows", "natives-linux", "natives-macos", "natives-macos-arm64"].each { classifier ->
        runtimeOnly "org.lwjgl:lwjgl-nanovg:${lwjglVersion}:${classifier}"
        include "org.lwjgl:lwjgl-nanovg:${lwjglVersion}:${classifier}"
    }
}

processResources {
    inputs.property "version", project.version
    inputs.property "minecraft_version", project.minecraft_version
    inputs.property "loader_version", project.loader_version
    filteringCharset = "UTF-8"

    filesMatching("fabric.mod.json") {
        expand(
                "version": project.mod_version,
                "minecraft_version": project.minecraft_version,
                "loader_version": project.loader_version
        )
    }
}

def targetJavaVersion = 25
tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
        it.options.release.set(targetJavaVersion)
    }
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.name}" }
    }
}

tasks.register('gametestJar', Jar) {
    archiveClassifier = 'gametest'
    from sourceSets.gametest.output
}

tasks.register('testPearlFlatTrajectory', JavaExec) {
    dependsOn tasks.named('gametestClasses')
    classpath = sourceSets.gametest.runtimeClasspath
    mainClass = 'net.iqaddons.mod.gametest.PearlFlatTrajectoryTest'
    javaLauncher = javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(25) }
}

tasks.register('testNanoVgDiagnosticMode', JavaExec) {
    dependsOn tasks.named('gametestClasses')
    classpath = sourceSets.gametest.runtimeClasspath
    mainClass = 'net.iqaddons.mod.gametest.NanoVgDiagnosticModeTest'
    javaLauncher = javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(25) }
}

tasks.register('testPublicFeatureLogic', JavaExec) {
    dependsOn tasks.named('gametestClasses')
    classpath = sourceSets.gametest.runtimeClasspath
    mainClass = 'net.iqaddons.mod.gametest.PublicFeatureLogicTest'
    javaLauncher = javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(25) }
}

tasks.named('check') {
    dependsOn tasks.named('testNanoVgDiagnosticMode')
    dependsOn tasks.named('testPublicFeatureLogic')
}

dependencies {
    productionRuntimeMods "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    gametestRuntimeOnly "net.fabricmc:fabric-language-kotlin:${project.fabric_language_kotlin_version}"
    productionRuntimeMods "com.terraformersmc:modmenu:${project.modmenu_version}"
    productionRuntimeMods "net.fabricmc:fabric-language-kotlin:${project.fabric_language_kotlin_version}"
}
